Fix player drag handle being too short (#5)

--- a/src/styles/PlayingList.module.css
+++ b/src/styles/PlayingList.module.css
@@ -1,18 +1,9 @@
 .item {
     margin-bottom: var(--mantine-spacing-sm);
     outline: "1px solid red";
-    
 }
-
 
 .itemDragging {
    opacity: 0.75; 
    outline: "1px solid blue";
 }
-
-.dragHandle {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-  }
